--- a/courses/templates/registration/login.html
+++ b/courses/templates/registration/login.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Log in</title>
-</head>
-<body>
+{% extends "courses/base.html" %}
+
+{% block content %}
+<div class="auth-form">
     <h1>Log in</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Log in</button>
         <input type="hidden" name="next" value="{{ next }}">
+        <button type="submit">Log in</button>
     </form>
-</body>
-</html>
-
+</div>
+{% endblock %}
