--- a/courses/templates/courses/lesson_detail.html
+++ b/courses/templates/courses/lesson_detail.html
@@ -7,5 +7,11 @@
     <div>
         <p>{{ lesson.content }}</p>
     </div>
+
+    <div style="margin-top: 24px;">
+        <a href="{% url 'courses:course_detail' lesson.course.pk %}">
+            <button>← Back to Course</button>
+        </a>
+    </div>
 {% endblock %}
 
